--- a/custom_admin/templates/custom_admin/base.html
+++ b/custom_admin/templates/custom_admin/base.html
@@ -239,12 +239,13 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
             <h3>Admin Panel</h3>
-            <small>Essay Platform</small>
+            <small>Nibandha Nakshatra</small>
         </div>
         
         <ul class="nav flex-column">
